--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,4 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 @import 'variables';
-
-body {
-  background-color: $favColor;
-}
+@import 'cards';
+@import 'forms';
